--- a/projects/user-app/src/app/pages/change-password/change-password.html
+++ b/projects/user-app/src/app/pages/change-password/change-password.html
@@ -1,32 +1,38 @@
 <ng-container *transloco="let t">
-  <h2 mat-dialog-title>{{ t('CHANGE_PW.TITLE') }}</h2>
+  <h2 mat-dialog-title>{{ t('change-password.CHANGE_PW.TITLE') }}</h2>
 
   <mat-dialog-content>
     @if (isForced) {
-    <p class="warn-text" style="color: var(--mat-sys-error); margin-bottom: 16px">
-      {{ t('CHANGE_PW.FORCED_MSG') }}
-    </p>
+      <p class="warn-text" style="color: var(--mat-sys-error); margin-bottom: 16px">
+        {{ t('change-password.change-password.CHANGE_PW.FORCED_MSG') }}
+      </p>
     }
 
     <br />
     <form [formGroup]="pwForm" (ngSubmit)="onSubmit()" class="pw-form">
       <mat-form-field appearance="outline" class="full-width">
-        <mat-label>{{ t('CHANGE_PW.LABEL_NEW') }}</mat-label>
-        <input matInput formControlName="password" type="password" />
+        <mat-label>{{ t('change-password.CHANGE_PW.LABEL_NEW') }}</mat-label>
+        <input
+          matInput
+          formControlName="password"
+          type="password"
+          matTooltip="{{ t('change-password.CHANGE_PW.ERR_MIN8') }}"
+        />
 
         @if (pwForm.get('password')?.hasError('required')) {
-        <mat-error>{{ t('CHANGE_PW.ERR_REQUIRED') }}</mat-error>
-        } @if (pwForm.get('password')?.hasError('minlength')) {
-        <mat-error>{{ t('CHANGE_PW.ERR_MIN8') }}</mat-error>
+          <mat-error>{{ t('change-password.CHANGE_PW.ERR_REQUIRED') }}</mat-error>
+        }
+        @if (pwForm.get('password')?.hasError('minlength')) {
+          <mat-error>{{ t('change-password.CHANGE_PW.ERR_MIN8') }}</mat-error>
         }
       </mat-form-field>
 
       <mat-form-field appearance="outline" class="full-width">
-        <mat-label>{{ t('CHANGE_PW.LABEL_CONFIRM') }}</mat-label>
+        <mat-label>{{ t('change-password.CHANGE_PW.LABEL_CONFIRM') }}</mat-label>
         <input matInput formControlName="confirmPassword" type="password" />
 
         @if (pwForm.hasError('mismatch')) {
-        <mat-error>{{ t('CHANGE_PW.ERR_MISMATCH') }}</mat-error>
+          <mat-error>{{ t('change-password.CHANGE_PW.ERR_MISMATCH') }}</mat-error>
         }
       </mat-form-field>
     </form>
@@ -34,7 +40,7 @@
 
   <mat-dialog-actions align="end">
     @if (!isForced) {
-    <button mat-button (click)="onCancel()">{{ t('BTN.CANCEL') }}</button>
+      <button mat-button (click)="onCancel()">{{ t('BTN.CANCEL') }}</button>
     }
 
     <button
@@ -43,10 +49,10 @@
       (click)="onSubmit()"
       [disabled]="pwForm.invalid || isLoading()"
     >
-      @if(isLoading()) {
-      {{ t('CHANGE_PW.BTN_SAVE') }}
+      @if (isLoading()) {
+        {{ t('change-password.CHANGE_PW.BTN_SAVE') }}
       } @else {
-      {{ t('CHANGE_PW.BTN_CHANGE') }}
+        {{ t('change-password.CHANGE_PW.BTN_CHANGE') }}
       }
     </button>
   </mat-dialog-actions>
