--- a/projects/user-app/src/app/pages/register-user/register-user.html
+++ b/projects/user-app/src/app/pages/register-user/register-user.html
@@ -9,7 +9,12 @@
     </div>
 
     <div class="language-switch">
-      <button mat-icon-button [matMenuTriggerFor]="langMenu" aria-label="Sprache wechseln">
+      <button
+        mat-icon-button
+        [matMenuTriggerFor]="langMenu"
+        matTooltip="{{ t('MENU.CHANGE_LANGUAGE') }}"
+        aria-label="{{ t('MENU.CHANGE_LANGUAGE') }}"
+      >
         <mat-icon>language</mat-icon>
       </button>
       <mat-menu #langMenu="matMenu">
@@ -26,44 +31,51 @@
   <main class="main-content">
     <mat-card class="register-card">
       <mat-card-header>
-        <mat-card-title>{{ t('REGISTER.TITLE') }}</mat-card-title>
+        <mat-card-title>{{ t('register_user.REGISTER.TITLE') }}</mat-card-title>
       </mat-card-header>
 
       <mat-card-content>
         <form [formGroup]="regForm" (ngSubmit)="onSubmit()">
           <mat-form-field appearance="outline" class="full-width">
-            <mat-label>{{ t('REGISTER.NAME_LABEL') }}</mat-label>
-            <input matInput formControlName="name" placeholder="Max Mustermann" />
+            <mat-label>{{ t('register_user.REGISTER.NAME_LABEL') }}</mat-label>
+            <input matInput formControlName="name" placeholder="Max Mustermann" tabindex="1" />
           </mat-form-field>
 
           <mat-form-field appearance="outline" class="full-width">
-            <mat-label>{{ t('REGISTER.EMAIL_LABEL') }}</mat-label>
-            <input matInput formControlName="email" type="email" />
+            <mat-label>{{ t('register_user.REGISTER.EMAIL_LABEL') }}</mat-label>
+            <input matInput formControlName="email" type="email" tabindex="2" />
           </mat-form-field>
 
           <div class="row-inputs">
             <mat-form-field appearance="outline" class="half-width">
-              <mat-label>{{ t('REGISTER.PASSWORD_LABEL') }}</mat-label>
-              <input matInput formControlName="password" type="password" />
+              <mat-label>{{ t('register_user.REGISTER.PASSWORD_LABEL') }}</mat-label>
+              <input
+                matInput
+                formControlName="password"
+                type="password"
+                matTooltip="{{ t('register_user.REGISTER.PASSWORD_MIN_LENGTH_TOOLTIP') }}"
+                tabindex="3"
+              />
+
               @if (regForm.get('password')?.hasError('minlength')) {
-                <mat-error>{{ t('REGISTER.MIN_LENGTH_ERROR') }}</mat-error>
+                <mat-error>{{ t('register_user.REGISTER.MIN_LENGTH_ERROR') }}</mat-error>
               }
             </mat-form-field>
 
             <mat-form-field appearance="outline" class="half-width">
-              <mat-label>{{ t('REGISTER.CONFIRM_PASSWORD_LABEL') }}</mat-label>
-              <input matInput formControlName="confirmPassword" type="password" />
+              <mat-label>{{ t('register_user.REGISTER.CONFIRM_PASSWORD_LABEL') }}</mat-label>
+              <input matInput formControlName="confirmPassword" type="password" tabindex="4" />
               @if (regForm.hasError('mismatch')) {
-                <mat-error>{{ t('REGISTER.PASSWORD_MISMATCH_ERROR') }}</mat-error>
+                <mat-error>{{ t('register_user.REGISTER.PASSWORD_MISMATCH_ERROR') }}</mat-error>
               }
             </mat-form-field>
           </div>
 
           <div class="privacy-container">
-            <mat-checkbox formControlName="privacyPolicy" color="primary">
-              {{ t('REGISTER.AGREE_TEXT') }}
+            <mat-checkbox formControlName="privacyPolicy" color="primary" tabindex="5">
+              {{ t('register_user.REGISTER.AGREE_TEXT') }}
               <a routerLink="/privacy-policy" target="_blank" (click)="$event.stopPropagation()">
-                {{ t('REGISTER.PRIVACY_LINK') }}
+                {{ t('register_user.REGISTER.PRIVACY_LINK') }}
               </a>
             </mat-checkbox>
 
@@ -90,16 +102,19 @@
             type="submit"
             [disabled]="regForm.invalid || isLoading()"
             class="submit-btn"
+            tabindex="6"
           >
             @if (isLoading()) {
               <mat-spinner diameter="20"></mat-spinner>
             } @else {
-              {{ t('REGISTER.SUBMIT_BTN') }}
+              {{ t('register_user.REGISTER.SUBMIT_BTN') }}
             }
           </button>
 
           <div class="register-link-container">
-            <a routerLink="/login" class="login-link">{{ t('REGISTER.LOGIN_LINK') }}</a>
+            <a routerLink="/login" class="login-link">{{
+              t('register_user.REGISTER.LOGIN_LINK')
+            }}</a>
           </div>
         </form>
       </mat-card-content>
