--- a/projects/user-app/src/styles.scss
+++ b/projects/user-app/src/styles.scss
@@ -72,6 +72,7 @@ app-root {
   --mdc-snackbar-container-color: #f44336;
   --mdc-snackbar-supporting-text-color: #ffffff;
   --mat-snack-bar-button-color: #ffeb3b;
+  --mat-snack-bar-container-color: #f44336;
 }
 
 .error-snackbar .mat-mdc-snack-bar-container .mdc-snackbar__surface {
@@ -89,6 +90,7 @@ app-root {
   --mdc-snackbar-container-color: #4caf50;
   --mdc-snackbar-supporting-text-color: #ffffff;
   --mat-snack-bar-button-color: #ffeb3b;
+  --mat-snack-bar-container-color: #4caf50;
 }
 
 .success-snackbar .mat-mdc-snack-bar-container .mdc-snackbar__surface {
