feat: adding social media

--- a/theme/blue/assets/css/main.css
+++ b/theme/blue/assets/css/main.css
@@ -311,16 +311,16 @@ main p {
   margin-bottom: 1rem;
 }
 
-main strong {
-  font-weight: bold;
-}
-
 main a::before {
-  content: '&blacktriangleright; ';
+  content: '» ';
 }
 
-main .ul-sub {
+main .ul-sub > li {
   margin-left: 12px;
+
+  & strong {
+  font-weight: bold;
+  font-style: oblique;
 }
 
 /* --- CODE BLOCKS --- */
